--- a/index.html
+++ b/index.html
@@ -4,24 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEXCARD</title>
-    <style>
-        .hidden {
-            display: none;
-        }
-    </style>
 </head>
 <body>
-    <form id="myForm" method="POST" target="hidden_iframe">
-        <input type="hidden" name="fecha" id="fecha">
-        <input type="hidden" name="empresa" id="empresa">
-        <button type="submit">Submit</button>
+    <form method="POST" target="hidden_iframe">
+        <input type="hidden" name="fecha" value="2026-02-09 21:12:41">
+        <input type="hidden" name="empresa" value="Santitoon">
+        <input type="submit" value="Submit">
     </form>
-    <iframe name="hidden_iframe" class="hidden"></iframe>
-
+    <iframe name="hidden_iframe" style="display:none;"></iframe>
     <script>
-        document.getElementById('fecha').value = new Date().toISOString();
-        document.getElementById('empresa').value = 'YourCompany'; // Set this value accordingly
-        document.getElementById('myForm').submit();
+        document.querySelector('form').onsubmit = function(event) {
+            event.preventDefault(); // Prevent default form submission
+            this.submit(); // Submit the form programmatically
+        };
     </script>
 </body>
 </html>
