--- a/index.html
+++ b/index.html
@@ -762,7 +762,8 @@
       </nav>
 
       <div class="nav-cta">
-        <a class="btn btn-ghost" href="#planes">Ver planes</a>
+                <a class="btn btn-ghost" href="panel/login.html">Acceso empresas</a>
+<a class="btn btn-ghost" href="#planes">Ver planes</a>
         <a class="btn btn-primary" href="form/?empresa=demo&vendedor=DEMO" data-demo="1">Probar demo</a>
       </div>
     </div>
